@@ -1695,6 +1695,7 @@ include/bn/bn_tcl.h svneol=native#text/plain
 include/bn/clip.h svneol=native#text/plain
 include/bn/complex.h svneol=native#text/plain
 include/bn/defines.h svneol=native#text/plain
+include/bn/dvec.h svneol=native#text/plain
 include/bn/mat.h svneol=native#text/plain
 include/bn/msr.h svneol=native#text/plain
 include/bn/multipoly.h svneol=native#text/plain
@@ -1709,6 +1710,8 @@ include/bn/spm.h svneol=native#text/plain
 include/bn/tabdata.h svneol=native#text/plain
 include/bn/tol.h svneol=native#text/plain
 include/bn/vectfont.h svneol=native#text/plain
+include/bn/vector_fpu.h svneol=native#text/plain
+include/bn/vector_x86.h svneol=native#text/plain
 include/bn/version.h svneol=native#text/plain
 include/bn/vert_tree.h svneol=native#text/plain
 include/bn/vlist.h svneol=native#text/plain
@@ -1771,7 +1774,6 @@ include/dm/CMakeLists.txt svneol=native#text/plain
 include/dm/bview.h svneol=native#text/plain
 include/dm/defines.h svneol=native#text/plain
 include/dm/dm_xvars.h svneol=native#text/plain
-include/dvec.h svneol=native#text/plain
 include/fb.h svneol=native#text/plain
 include/fb/CMakeLists.txt svneol=native#text/plain
 include/fb/fb_X.h svneol=native#text/plain
@@ -1890,8 +1892,6 @@ include/sysv.h svneol=native#text/plain
 include/tclcad.h svneol=native#text/plain
 include/tie.h svneol=native#text/plain
 include/tol.h svneol=native#text/plain
-include/vector_fpu.h svneol=native#text/plain
-include/vector_x86.h svneol=native#text/plain
 include/vmath.h svneol=native#text/plain
 include/wdb.h svneol=native#text/plain
 misc/Bullet_Box_Chain_Demo.cpp svneol=native#text/plain
